# achroma

./: .clang-format  .clang-tidy  .gitignore  Achroma.desktop  CMakeLists.txt  CMakePresets.json  README.md  achroma-cli  cmake_uninstall.cmake.in  main.cpp  resources.qrc
.github/workflows/: build.yml
examples/: config.example.json
examples/scripts/: github.com.js
scripts/: build-appimage.sh  install.sh
src/: adblockinterceptor.cpp  adblockinterceptor.h  browser.cpp  browser.h  commands.cpp  commands.h  fuzzyfinder.cpp  fuzzyfinder.h  ipc.cpp  ipc.h  permissionbar.cpp  permissionbar.h  splash.cpp  splash.h  terminal.cpp  terminal.h  triggers.cpp  triggers.h  utils.cpp  utils.h  window.cpp  window.h
src/net/: cookieimport.cpp
test/: test.cpp  test_adblock.cpp  test_commands.cpp  test_commands_helpers.h  test_helpers.h  test_scripts.cpp  test_scripts_helpers.h
